add_photonic_port fix, tech issues
1) Fixes #72.  I believe that there was no issue, but rather misuse where add_photonic_port has an argument named 'orient', while PhotonicPort has a parameter named 'orientation'. Clarified by changing PhotonicPort to use 'orient' instead of 'orientation' to prevent future confusion.
 - Ports tested by adding directly or by adding a premade Port object, and both seem to work.

2) Modifying the layout_manager and photonic_core so that a user can change which bag_config, bag tech config, and bpg photonic tech config are run from within the spec file.
- This allows a user to force the tests/samples to be run using a certain BAG/BPG tech config, for example the dummy config. This will allow standardized tests, and can help with sample spec distribution.

--- a/examples/tech/BAG_tech_files/tech_params.yaml
+++ b/examples/tech/BAG_tech_files/tech_params.yaml
@@ -3,7 +3,7 @@
 # Layer/via names changed to reflect dummy BPG process
 
 # PDK library name.
-tech_lib: BPG_soi_dummy
+tech_lib: dummyLib
 # layout unit, in meters.
 layout_unit: 1.0e-6
 # layout resolution, in layout units.
