--- a/examples/tech/bag_config.yaml
+++ b/examples/tech/bag_config.yaml
@@ -1,4 +1,5 @@
-# BAG socket configuration
+# Sample BAG socket configuration
+# Replace dummyLib with your Cadence tech library
 socket:
   # the host running the database.  localhost if on the same machine.
   host: "localhost"
@@ -19,7 +20,7 @@ database:
   # configurations for schematic import and generation
   schematic:
     # technology library to configure new libraries with
-    tech_lib: "45RFSOI_mod_eos32"
+    tech_lib: "dummyLib"
     # symbol pin master
     sympin: ["basic", "sympin", "symbolNN"]
     # input pin master
@@ -31,11 +32,11 @@ database:
     # simulators where termOrder CDF field should be filled
     simulators: ["auLvs", "auCdl", "spectre", "hspiceD"]
     # libraries to exclude for schematic import
-    exclude_libraries: ["analogLib", "basic", "45RFSOI_mod_eos32"]
+    exclude_libraries: ["analogLib", "basic", "dummyLib"]
   # configurations for testbench creation
   testbench:
     # config view global libraries
-    config_libs: "45RFSOI_mod_eos32 analogLib basic"
+    config_libs: "dummyLib analogLib basic"
     # config view cellviews
     config_views: "spectre schematic calibre veriloga"
     # config view stop cellviews
@@ -124,6 +125,7 @@ path_setup:
   - "${BAG_WORK_DIR}/BAG_framework"
   - "${BAG_WORK_DIR}/Photonic_Core_Layout"
   - "${BAG_WORK_DIR}/BAG2_TEMPLATES_EC"
+  - "${BAG_WORK_DIR}/BPG"
 
 # Configuration for Berkeley Photonics Generator
 bpg_config:
