--- a/examples/tech/BPG_tech_files/gds_map.yaml
+++ b/examples/tech/BPG_tech_files/gds_map.yaml
@@ -62,7 +62,7 @@ layer_map:
   !!python/tuple [V1, drawing]: [21, 0]
   !!python/tuple [V1, phot]: [21, 10]
   !!python/tuple [M2, drawing]: [12, 0]
-  !!python/tuple [M2, drawing]: [12, 20]
+  !!python/tuple [M2, label]: [12, 20]
   !!python/tuple [M2, phot]: [12, 10]
   !!python/tuple [V2, drawing]: [22, 0]
   !!python/tuple [V2, phot]: [22, 10]
@@ -84,7 +84,18 @@ layer_map:
   !!python/tuple [M6, drawing]: [16, 0]
   !!python/tuple [M6, label]: [16, 20]
   !!python/tuple [M6, phot]: [16, 10]
-  !!python/tuple [N, phot]: [50, 10]
-  !!python/tuple [P, phot]: [60, 10]
+  !!python/tuple [NN, drawing]: [50, 0]
+  !!python/tuple [N1, drawing]: [51, 0]
+  !!python/tuple [N2, drawing]: [52, 0]
+  !!python/tuple [N3, drawing]: [53, 0]
+  !!python/tuple [N4, drawing]: [54, 0]
+  !!python/tuple [N5, drawing]: [55, 0]
+  !!python/tuple [PP, drawing]: [60, 0]
+  !!python/tuple [P1, drawing]: [61, 0]
+  !!python/tuple [P2, drawing]: [62, 0]
+  !!python/tuple [P3, drawing]: [63, 0]
+  !!python/tuple [P4, drawing]: [64, 0]
+  !!python/tuple [P5, drawing]: [65, 0]
+
   !!python/tuple [CLAD, phot]: [8, 10]
   !!python/tuple [BOX, phot]: [9, 10]
