--- a/tests/specs/port_extraction_specs.yaml
+++ b/tests/specs/port_extraction_specs.yaml
@@ -27,3 +27,7 @@ layout_params:
 # Cadence related parameters
 impl_lib: 'Top_Level_Lib'
 impl_cell: 'Top_Level_Cell'
+
+# Configuration for Berkeley Photonics Generator
+bpg_config:
+  photonic_tech_config_path:  "${BAG_WORK_DIR}/BPG/examples/tech/BPG_tech_files/photonic_tech_config.yaml"
