--- a/tests/specs/add_rect_specs.yaml
+++ b/tests/specs/add_rect_specs.yaml
@@ -23,6 +23,6 @@ layout_params:  # Place parameters to be passed to the generator class under her
 impl_lib: 'add_rect_lib'
 impl_cell: 'add_rect_cell'
 
-# Configuration for Berkeley Photonics Generator
+## Configuration for Berkeley Photonics Generator
 bpg_config:
   photonic_tech_config_path:  "${BAG_WORK_DIR}/BPG/examples/tech/BPG_tech_files/photonic_tech_config.yaml"
