--- a/tests/specs/add_round_specs.yaml
+++ b/tests/specs/add_round_specs.yaml
@@ -27,8 +27,6 @@ layout_params:  # Place parameters to be passed to the generator class under her
   theta0: 82
   theta1: 319
 
-
-# Vestigial parameters required by BAG class
-sweep_params:
-  intent: [standard]
-root_dir: 'data'
+# Base configuration for Berkeley Photonics Generator
+bpg_config:
+  photonic_tech_config_path:  "${BAG_WORK_DIR}/BPG/examples/tech/BPG_tech_files/photonic_tech_config.yaml"
