--- a/tests/specs/any_angle_port_to_port_at_angle_hierarchy_specs.yaml
+++ b/tests/specs/any_angle_port_to_port_at_angle_hierarchy_specs.yaml
@@ -21,3 +21,7 @@ layout_params:  # Place parameters to be passed to the generator class under her
 # Cadence related parameters
 impl_lib: 'any_angle'
 impl_cell: 'any_angle'
+
+# Base configuration for Berkeley Photonics Generator
+bpg_config:
+  photonic_tech_config_path:  "${BAG_WORK_DIR}/BPG/examples/tech/BPG_tech_files/photonic_tech_config.yaml"
