--- a/tests/specs/any_angle_specs.yaml
+++ b/tests/specs/any_angle_specs.yaml
@@ -19,3 +19,7 @@ layout_params:  # Place parameters to be passed to the generator class under her
 # Cadence related parameters
 impl_lib: 'add_rect_lib'
 impl_cell: 'add_rect_cell'
+
+# Base configuration for Berkeley Photonics Generator
+bpg_config:
+  photonic_tech_config_path:  "${BAG_WORK_DIR}/BPG/examples/tech/BPG_tech_files/photonic_tech_config.yaml"
