--- a/tests/specs/waveguide_and_port_specs.yaml
+++ b/tests/specs/waveguide_and_port_specs.yaml
@@ -26,7 +26,6 @@ layout_params:
 impl_lib: 'test_lib'
 impl_cell: 'test_cell'
 
-# Vestigial parameters required by BAG class
-sweep_params:
-  intent: [standard]
-root_dir: 'data'
+# Base configuration for Berkeley Photonics Generator
+bpg_config:
+  photonic_tech_config_path:  "${BAG_WORK_DIR}/BPG/examples/tech/BPG_tech_files/photonic_tech_config.yaml"
