Adding trigger to run CI/CD checks on every pull request to master

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,16 +4,21 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  - master
+
+# Run this pipeline whenever a pull request to master or release is executed
+pr:
+  - master
+  - releases/*
 
 pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  - script: echo Hello, world!
+    displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: 'Run a multi-line script'
