Testing to see directory contents in CI container

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,6 @@ steps:
   - script: |
       echo Add other tasks to build, test, and deploy your project.
       echo See https://aka.ms/yaml
+      pwd
+      ls -la
     displayName: 'Run a multi-line script'
