--- a/tests/specs/path_test_specs.yaml
+++ b/tests/specs/path_test_specs.yaml
@@ -9,7 +9,7 @@ gds_filename: path
 
 # Generator Params
 # Module that contains the layout generator class
-layout_package: 'tests.test_path'
+layout_package: 'bpg_test_suite.test_path'
 layout_class: 'Path'  # Layout generator class name
 
 layout_params:  # Place parameters to be passed to the generator class under here
