--- a/tests/specs/any_angle_port_to_port_at_angle_no_hierarchy_specs.yaml
+++ b/tests/specs/any_angle_port_to_port_at_angle_no_hierarchy_specs.yaml
@@ -7,11 +7,11 @@ project_name: bpg_test_suite
 lsf_filename: any_angle_port_to_port_at_angle_no_hierarchy
 gds_filename: any_angle_port_to_port_at_angle_no_hierarchy
 
-bag_config_path: 'BPG/examples/tech/bag_config.yaml'
+bag_config_path: 'example_tech/bag_config.yaml'
 
 # Generator Params
 # Module that contains the layout generator class
-layout_package: 'tests.test_anyangle'
+layout_package: 'bpg_test_suite.test_anyangle'
 layout_class: 'AnyAngleNoHierarchyPortToPort'  # Layout generator class name
 
 layout_params:  # Place parameters to be passed to the generator class under here
