--- a/tests/specs/port_extraction_specs.yaml
+++ b/tests/specs/port_extraction_specs.yaml
@@ -15,7 +15,7 @@ bag_config_path: 'BPG/examples/tech/bag_config.yaml'
 
 # Generator Params
 # Module that contains the layout generator class
-layout_package: 'tests.test_port_extraction'
+layout_package: 'bpg_test_suite.test_port_extraction'
 # Layout generator class name
 layout_class: 'PortExtraction'
 
