--- a/tests/specs/port_extraction_specs.yaml
+++ b/tests/specs/port_extraction_specs.yaml
@@ -11,7 +11,7 @@ lsf_filename: port_extraction
 gds_filename: port_extraction
 
 # Specify a generic layermap
-bag_config_path: 'BPG/examples/tech/bag_config.yaml'
+bag_config_path: 'example_tech/bag_config.yaml'
 
 # Generator Params
 # Module that contains the layout generator class
