Removing old docs and references before going open source

--- a/tests/tech/bag_config.yaml
+++ b/tests/tech/bag_config.yaml
@@ -19,7 +19,7 @@ database:
   # configurations for schematic import and generation
   schematic:
     # technology library to configure new libraries with
-    tech_lib: "45RFSOI_mod_eos32"
+    tech_lib: "dummyLib"
     # symbol pin master
     sympin: ["basic", "sympin", "symbolNN"]
     # input pin master
@@ -31,11 +31,11 @@ database:
     # simulators where termOrder CDF field should be filled
     simulators: ["auLvs", "auCdl", "spectre", "hspiceD"]
     # libraries to exclude for schematic import
-    exclude_libraries: ["analogLib", "basic", "45RFSOI_mod_eos32"]
+    exclude_libraries: ["analogLib", "basic", "dummyLib"]
   # configurations for testbench creation
   testbench:
     # config view global libraries
-    config_libs: "45RFSOI_mod_eos32 analogLib basic"
+    config_libs: "dummyLib analogLib basic"
     # config view cellviews
     config_views: "spectre schematic calibre veriloga"
     # config view stop cellviews
