--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-graft-dir examples
-graft-dir tests/specs/*
-graft-dir BPG/workspace_setup/*
+include BPG/examples/specs/*
+include BPG/workspace_setup/.gitignore
+include BPG/workspace_setup/sourceme.sh
