--- a/tests/specs/gds_import.yaml
+++ b/tests/specs/gds_import.yaml
@@ -20,6 +20,4 @@ layout_params:
 impl_lib: 'gds_import'
 impl_cell: 'gds_import'
 
-# Base configuration for Berkeley Photonics Generator
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/bag_config.yaml"
