--- a/tests/specs/add_round_specs.yaml
+++ b/tests/specs/add_round_specs.yaml
@@ -27,6 +27,4 @@ layout_params:  # Place parameters to be passed to the generator class under her
   theta0: 82
   theta1: 319
 
-# Base configuration for Berkeley Photonics Generator
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/bag_config.yaml"
