--- a/tests/specs/add_via_stack.yaml
+++ b/tests/specs/add_via_stack.yaml
@@ -18,6 +18,4 @@ layout_params:
 impl_lib: 'add_rect_lib'
 impl_cell: 'add_rect_cell'
 
-# Base configuration for Berkeley Photonics Generator
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/bag_config.yaml"
