--- a/tests/specs/any_angle_alignment.yaml
+++ b/tests/specs/any_angle_alignment.yaml
@@ -17,6 +17,4 @@ layout_params:
 impl_lib: 'any_angle'
 impl_cell: 'sbend'
 
-# Base configuration for Berkeley Photonics Generator
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/bag_config.yaml"
