--- a/tests/specs/dataprep_debug_specs.yaml
+++ b/tests/specs/dataprep_debug_specs.yaml
@@ -29,6 +29,4 @@ impl_lib: 'Top_Level_Lib'
 impl_cell: 'Top_Level_Cell'
 
 
-# Base configuration for Berkeley Photonics Generator
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/bag_config.yaml"
