--- a/tests/specs/sweep_specs.yaml
+++ b/tests/specs/sweep_specs.yaml
@@ -20,6 +20,4 @@ layout_params:  # Place parameters to be passed to the generator class under her
 impl_lib: 'sweep_lib'
 impl_cell: 'sweep_cell'
 
-# Base configuration for Berkeley Photonics Generator
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/bag_config.yaml"
