--- a/tests/specs/waveguide_and_port_specs.yaml
+++ b/tests/specs/waveguide_and_port_specs.yaml
@@ -26,5 +26,4 @@ layout_params:
 impl_lib: 'test_lib'
 impl_cell: 'test_cell'
 
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/bag_config.yaml"
