--- a/tests/specs/dataprep_specs_op.yaml
+++ b/tests/specs/dataprep_specs_op.yaml
@@ -29,5 +29,7 @@ layout_params:
 impl_lib: 'Top_Level_Lib'
 impl_cell: 'Top_Level_Cell'
 
-bpg_config:
-  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+bag_config_path: "${BAG_WORK_DIR}/example_tech/BAG_tech_files/photonic_tech_config.yaml"
+#bpg_config:
+#  photonic_tech_config_path:  "${BAG_WORK_DIR}/example_tech/BPG_tech_files/photonic_tech_config.yaml"
+
